--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ Pillow>=7.1.2
 PyYAML>=5.3.1
 requests>=2.23.0
 scipy>=1.4.1
-torch>=1.7.0
-torchvision>=0.8.1
+torch==1.8.0
+torchvision==0.9.0
 tqdm>=4.41.0
 PyQt5>=5.9.2
 
@@ -35,5 +35,3 @@ seaborn>=0.11.0
 # pycocotools>=2.0  # COCO mAP
 # roboflow
 thop>=0.0.31-2005241907
-
-pyyaml>=0.2.5
